fixed radio buttons being clipped off on left edge on Mac

--- a/app/assets/stylesheets/bootstrap_custom.css.scss
+++ b/app/assets/stylesheets/bootstrap_custom.css.scss
@@ -20,6 +20,11 @@ input[type="checkbox"]
  margin-top: 2px; 
 }
 
+.radio
+{
+  padding-left: 22px;
+}
+
 // Customizations for navbar
 .navbar
 {
